--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/webpacker": "4.3.0",
     "axios": "^0.21.4",
     "jquery": "^3.6.0",
+    "rails-ujs": "^5.2.6",
     "trix": "^1.0.0",
     "turbolinks": "^5.2.0"
   },
